Source/WebCore/bindings/js/JSDOMWindowBase.cpp
@@ -269,6 +269,8 @@ VM& JSDOMWindowBase::commonVM()
         vm->heap.machineThreads().addCurrentThread();
 #endif
 
+        vm->setGlobalConstRedeclarationShouldThrow(Settings::globalConstRedeclarationShouldThrow());
+
         initNormalWorldClientData(vm);
     }
 
