Source/WebCore/page/Settings.h
@@ -30,6 +30,7 @@
 #include "ClipboardAccessPolicy.h"
 #include "EditingBehaviorTypes.h"
 #include "IntSize.h"
+#include "RuntimeApplicationChecks.h"
 #include "SecurityOrigin.h"
 #include "SettingsMacros.h"
 #include "TextFlags.h"
@@ -188,6 +189,17 @@ public:
     static void setShouldUseHighResolutionTimers(bool);
     static bool shouldUseHighResolutionTimers() { return gShouldUseHighResolutionTimers; }
 #endif
+
+    static bool globalConstRedeclarationShouldThrow()
+    { 
+#if PLATFORM(MAC)
+        return !MacApplication::isIBooks();
+#elif PLATFORM(IOS)
+        return !IOSApplication::isIBooks();
+#else
+        return true;
+#endif
+    }
 
     WEBCORE_EXPORT void setBackgroundShouldExtendBeyondPage(bool);
     bool backgroundShouldExtendBeyondPage() const { return m_backgroundShouldExtendBeyondPage; }
